--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/appbackgroundincustomerinterfaces"
     tools:context=".Cart">
 
     <TextView
@@ -14,6 +15,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
         android:text="Pumpkin"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,6 +28,9 @@
         android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
         android:text="2kg"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
         app:layout_constraintStart_toEndOf="@+id/textView14" />
 
@@ -55,6 +62,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
         android:text="Stack of Rice"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
@@ -65,6 +75,9 @@
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
         android:text="1"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4" />
 
@@ -72,8 +85,8 @@
         android:id="@+id/button9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
         android:text="@string/EditButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3" />
@@ -96,6 +109,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
         android:text="Sugar"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
@@ -106,6 +122,9 @@
         android:layout_marginLeft="42dp"
         android:layout_marginStart="42dp"
         android:text="3kg"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
 
@@ -113,8 +132,8 @@
         android:id="@+id/button11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="41dp"
-        android:layout_marginStart="41dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
         android:text="@string/EditButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
         app:layout_constraintStart_toEndOf="@+id/textView17" />
@@ -137,6 +156,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
         android:text="Carrot"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -147,6 +169,9 @@
         android:layout_marginLeft="57dp"
         android:layout_marginStart="57dp"
         android:text="500g"
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
         app:layout_constraintStart_toEndOf="@+id/textView16" />
 
@@ -154,8 +179,8 @@
         android:id="@+id/button13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="64dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
         android:text="@string/EditButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView5" />
