--- a/app/src/main/res/layout/activity_market_home.xml
+++ b/app/src/main/res/layout/activity_market_home.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/appbackgroundincustomerinterfaces"
     tools:context=".MarketHome">
 
     <TextView
         android:id="@+id/nameInHome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="152dp"
-        android:layout_marginStart="152dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginLeft="132dp"
         android:layout_marginTop="48dp"
         android:text="@string/Market"
+        android:textColor="@color/black"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +30,7 @@
         android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="@string/Password"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
@@ -40,6 +43,7 @@
         android:layout_marginStart="84dp"
         android:layout_marginTop="28dp"
         android:text="@string/NotAMemberQuestion"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
@@ -52,6 +56,7 @@
         android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="@string/UserName"
+        android:textColor="@color/black"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameInHome" />
