--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#004d40</color>
     <color name="colorPrimaryDark">#00251a</color>
     <color name="colorAccent">#39796b</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 
 
     <color name="btnSignUp">#39796b</color>
