--- a/app/src/main/res/layout/activity_item_menu.xml
+++ b/app/src/main/res/layout/activity_item_menu.xml
@@ -7,13 +7,31 @@
     android:background="@drawable/appbackgroundincustomerinterfaces"
     tools:context=".ItemMenu">
 
+    <ImageButton
+        android:id="@+id/cart2"
+        android:layout_width="56dp"
+        android:layout_height="52dp"
+        android:onClick="onCartButtonPushed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/shoppingcart" />
+
+    <ImageButton
+        android:id="@+id/home2"
+        android:layout_width="56dp"
+        android:layout_height="52dp"
+        android:onClick="onHomeButtonPush"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/home" />
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="87dp"
         android:layout_height="92dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pumpkin" />
@@ -22,7 +40,7 @@
         android:id="@+id/editText2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
