--- a/app/src/main/res/layout/activity_employee_home.xml
+++ b/app/src/main/res/layout/activity_employee_home.xml
@@ -20,8 +20,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
             android:layout_marginTop="100dp"
+            android:layout_marginRight="40dp"
+            android:onClick="AdminHomeLog"
             android:text="@string/Admin" />
 
         <Button
