--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,15 @@
     <color name="pink">#FF4081</color>
     <color name="whitee">#ffffff</color>
     <color name="blackk">#232530</color>
+
+    <color name="Rides">#2F7092</color>
+    <color name="Earn">#0D5D98</color>
+    <color name="headings">#3797CF</color>
+    <color name="SolidCircle">#D3D3D3</color>
+    <color name="CircleBorder">#808080</color>
+    <color name="gradEnd">#67EFC8</color>
+    <color name="gradStart">#63C9FF</color>
+    <color name="followersBg">#65DCE5</color>
+    <color name="followingBg">#65DCE5</color>
+    <color name="gray">#E5E5E5</color>
 </resources>
