--- a/app/src/main/res/layout/activity_sign_up_home.xml
+++ b/app/src/main/res/layout/activity_sign_up_home.xml
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#32CD32"
-            android:onClick="Loadregister"
+            android:onClick="LoardLogin"
             android:text="SignIn"
             android:textColor="@android:color/white" />
 
