--- a/app/src/main/res/layout/activity_deliver_login.xml
+++ b/app/src/main/res/layout/activity_deliver_login.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".getOrder"
-    android:background="@drawable/back">
+    tools:context=".deliverLogin"
+    android:background="@drawable/back2">
 
     <ImageView
         android:id="@+id/iv_user"
         android:layout_width="100dp"
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/download"
+        app:srcCompat="@drawable/deliver"
         tools:layout_editor_absoluteX="48dp"
         tools:layout_editor_absoluteY="45dp" />
 
@@ -24,12 +24,12 @@
         android:layout_alignStart="@+id/et_name"
         android:layout_alignLeft="@+id/et_name"
         android:layout_centerInParent="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginLeft="49dp"
-        android:layout_marginTop="38dp"
-        android:text="Get Order"
+        android:layout_marginStart="65dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="30dp"
+        android:text="Log In"
         android:textColor="#000000"
-        android:textSize="40sp" />
+        android:textSize="45sp" />
 
     <!-- name-->
     <EditText
@@ -43,10 +43,37 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Enter Order ID" />
+        android:hint="Enter Username" />
 
     <TextView
         android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_name"
+        android:layout_alignStart="@+id/et_name"
+        android:layout_alignLeft="@+id/et_name"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="17dp"
+        android:text="Username :"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/et_name6"
+        android:textColor="#ffffff"
+        android:background="#11000000"
+        android:layout_width="260dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/et_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Enter Password" />
+
+    <TextView
+        android:id="@+id/tv_name6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_name1"
@@ -55,7 +82,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="17dp"
-        android:text="Enter Order Id :"
+        android:text="Password :"
         android:textColor="#000000"
         android:textSize="16sp" />
 
@@ -63,22 +90,11 @@
         android:id="@+id/btn_register"
         android:layout_width="260dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/et_name"
+        android:layout_below="@+id/et_name6"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:background="@drawable/mybutton"
-        android:onClick="LoadViewAddress"
-        android:text="Get Order ID" />
+        android:text="Sign In" />
 
-    <Button
-        android:id="@+id/btn_register1"
-        android:layout_width="260dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/btn_register"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/mybutton1"
-        android:onClick="LoadProfile"
-        android:text=" View my Profile" />
 
 </RelativeLayout>
