--- a/app/src/main/res/layout/activity_deliver_login.xml
+++ b/app/src/main/res/layout/activity_deliver_login.xml
@@ -94,6 +94,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:background="@drawable/mybutton"
+        android:onClick="GetOrder"
         android:text="Sign In" />
 
 
