--- a/app/src/main/res/layout/activity_order_success.xml
+++ b/app/src/main/res/layout/activity_order_success.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderSuccess">
+    tools:context=".OrderSuccess"
+    android:background="@drawable/anuliyg">
 
 
     <TextView
