--- a/app/src/main/res/layout/activity_take_order.xml
+++ b/app/src/main/res/layout/activity_take_order.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TakeOrder">
+    tools:context=".TakeOrder"
+    android:background="@drawable/vegbackg">
 
 
     <Button
@@ -32,7 +33,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#009688"
+        android:background="#3F51B5"
         android:text="       Select Order"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
